--- a/app/shared/components/downtime-timeline/downtime-timeline.component.css
+++ b/app/shared/components/downtime-timeline/downtime-timeline.component.css
@@ -4,6 +4,12 @@
     100% {background-color: #00695c;}
 }
 
+.timeline-container {
+    height:auto; 
+    padding-right: 50px; 
+    padding-left: 5px
+}
+
 .timeline-column {
     position: relative;
     float: left;
