--- a/app/availability/detector-view/detectors/site-cpu-analysis-detector/site-cpu-analysis-detector.component.html
+++ b/app/availability/detector-view/detectors/site-cpu-analysis-detector/site-cpu-analysis-detector.component.html
@@ -10,6 +10,7 @@
     <div class="divider" style="margin-bottom: 25px;margin-top: 25px"></div>
 </div>
 
+<div *ngIf="highlightedAbnormalTimePeriod">{{highlightedAbnormalTimePeriod.message}}</div>
 
 
 <metric-graph 
