Title and description changes

--- a/app/availability/detector-view/detectors/aspnetcore-detector/aspnetcore-detector.component.html
+++ b/app/availability/detector-view/detectors/aspnetcore-detector/aspnetcore-detector.component.html
@@ -1,5 +1,5 @@
 <metric-graph [metricSets]="detectorMetrics" [title]="detectorMetricsTitle" [chartType]="metricsChartType" [yAxisLabel]="detectorMetricsYAxisLabel"></metric-graph>
-<span *ngIf="showMetadata">Startup failures captured in application event logs</span>
+<span *ngIf="showMetadata">Startup failures captured in eventlogs</span>
 <table *ngIf="showMetadata" class="table table-bordered" style="margin-top:8px;margin-bottom:5px;">
     <thead>
         <tr>
