--- a/app/availability/detector-view/detector-view-problem/detector-view-problem.component.html
+++ b/app/availability/detector-view/detector-view-problem/detector-view-problem.component.html
@@ -7,12 +7,19 @@
 <!-- Abnormal Time Periods Found -->
 <div *ngIf="!loading && abnormalTimePeriods && abnormalTimePeriods.length > 0">
     <div class="focus-box focus-box" [ngClass]="{'focus-box-warning': !isHealthyNow || true }" style="background-color: #fff7ee" *ngIf="!loading">
-        <h4 class="not-bold" *ngIf="isHealthyNow">
-                {{detectorFriendlyName}} Detected {{abnormalTimePeriods.length}} Times in Last 24 Hours
+        <h4 class="not-bold" *ngIf="isHealthyNow && !highlightedDowntime">
+                {{detectorFriendlyName}} Detected {{abnormalTimePeriods.length > 1 ? 'Multiple Times ' : '' }}in Last 24 Hours
         </h4>
+        <h4 class="not-bold" *ngIf="!isHealthyNow && !highlightedDowntime">
+                {{detectorFriendlyName}} Detected Right Now
+        </h4>
+        <h4 class="not-bold" *ngIf="highlightedDowntime">
+                Selected {{detectorFriendlyName}} Period
+        </h4>
+        
         <div *ngFor="let downtime of abnormalTimePeriods | slice:0:messagesDisplayedToIndex">
             <div>
-                <div style="color:#ab4646">
+                <div style="color:#ab4646" *ngIf="highlightedDowntime">
                     <b><i class="fa fa-clock-o" aria-hidden="true"></i> {{formatDate(downtime.startTime)}} - {{formatDate(downtime.endTime)}}</b>
                 </div>
                 <p style="font-size: 14px;">{{downtime.message}}</p>
