Adding CPU experience to Bot flow

--- a/app/solutions/components/specific-solutions/scale-up-solution/scale-up-solution.component.html
+++ b/app/solutions/components/specific-solutions/scale-up-solution/scale-up-solution.component.html
@@ -34,4 +34,16 @@
 
     </div>
 
+    <p style="padding: 10px 0px 0px 0px" [innerHtml]="secondarySuggestion" *ngIf="secondarySuggestion"></p>
+
+    <div class="header2">Why you should scale up</div>
+    <ul>
+        <li *ngFor="let statement of whyToScale">{{statement}}</li>
+    </ul>
+
+    <div class="header2">Why you not should scale up</div>
+    <ul>
+        <li *ngFor="let statement of whyNotToScale">{{statement}}</li>
+    </ul>
+
 </default-solution-template>
