Adding scale up action

--- a/app/solutions/components/specific-solutions/scale-up-solution/scale-up-solution.component.html
+++ b/app/solutions/components/specific-solutions/scale-up-solution/scale-up-solution.component.html
@@ -24,7 +24,7 @@
             <br/>
             <p [innerHtml]="suggestion"></p>
             <div style="text-align:right">
-                <button class="btn btn-primary">Open Scale Up App Service Plan</button>
+                <button class="btn btn-primary" (click)="openBlade()">Open Scale Up App Service Plan</button>
             </div>
 
         </div>
