--- a/app/availability/observations/observations-availability.component.html
+++ b/app/availability/observations/observations-availability.component.html
@@ -2,6 +2,7 @@
     <h4 class="not-bold" style="margin-top:10px" *ngIf="selectedDowntimeIndex === -1">
             Your app is healthy right now.
     </h4>
+    
     <div style="border-top: 1px solid rgb(180, 180, 180);max-width: 800px;">
     <h5 class="not-bold" *ngIf="analysisResponse.abnormalTimePeriods.length > 0">However, we did detect downtimes in the last 24 hours. Select one from the orange timeline above to investigate possible causes.</h5>
     
@@ -19,6 +20,9 @@
         </a>
     </p>
     <div *ngIf="downtimesViewModel[selectedDowntimeIndex].showDetails">
+
+        <app-insights-exceptions [startTime]="analysisResponse.abnormalTimePeriods[selectedDowntimeIndex].startTime" [endTime]="analysisResponse.abnormalTimePeriods[selectedDowntimeIndex].endTime"></app-insights-exceptions>
+
         Observations: 
         <div class="observation">
             <ul>
