--- a/app/shared/components/app-insights/exceptions/app-insights-exceptions.component.html
+++ b/app/shared/components/app-insights/exceptions/app-insights-exceptions.component.html
@@ -1,1 +1,37 @@
-{{exceptions}}
+<div *ngIf="appInsightsService.appInsightsSettings.validForStack" class="panel panel-default" style="margin-top:15px;margin-bottom:20px">
+    <div class="panel-heading" style="font-weight:500;font-size:15px">
+            <img src="https://azure.microsoft.com/svghandler/application-insights/?width=18&height=18">            
+            Top Server Exceptions During This Time
+            <div class="pull-right hyperlink" style="font-size:13px">
+                View More in Application Insights 
+                <i class="fa fa-chevron-right" aria-hidden="true" style="margin-left:5px"></i>                
+            </div>
+    </div>
+    <div class="panel-body" style="min-height:100px;overflow:auto">
+        <div *ngIf="loading" style="font-size:14px">
+                <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true" style="color:#383838"></i>
+                Fetching exceptions from Application Insights            
+        </div>
+        <table *ngIf="!loading && exceptions.length > 0" class="table table-bordered table-hover table-responsive">
+            <thead>
+                <tr class="info">
+                    <th>Message</th>
+                    <th>Exception</th>
+                    <th>Count</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of exceptions" style="font-size:14px">
+                    <td>{{item.message}}</td>
+                    <td>{{item.exception}}</td>
+                    <td>{{item.count}}</td>
+                </tr>
+            </tbody>
+
+        </table>
+
+        <div *ngIf="!loading && exceptions.length === 0" style="font-size:14px">
+            No Exceptions found during this time.
+        </div>
+    </div>
+</div>
