--- a/app/shared/components/app-insights/app-insights-tile.component.html
+++ b/app/shared/components/app-insights/app-insights-tile.component.html
@@ -48,10 +48,11 @@
 
 
                         <div style="margin-top:-5px">
-                            (With Support Center)
+                            (With App Service diagnostics)
                             <div class="tool-tip" style="height:21px">
                                     <i class="fa fa-info-circle" style="color:#676767;float:right;padding-top:10px"></i>
-                                    <span class="tool-tip-text" style="font-variant:normal; width:150px">Application Insights helps you detect and diagnose issues in your web application code.</span>
+                                    <span class="tool-tip-text" style="font-variant:normal; width:150px">Connect your application insights resource with App Service diagnostics to gain better insights about
+                                        your failures and correlation with platform events.</span>
                                 </div>
                         </div>
                     </div>
