--- a/app/shared/components/app-insights/exceptions/app-insights-exceptions.component.html
+++ b/app/shared/components/app-insights/exceptions/app-insights-exceptions.component.html
@@ -1,16 +1,16 @@
-<div *ngIf="appInsightsService.appInsightsSettings.validForStack" class="panel panel-default" style="margin-top:15px;margin-bottom:20px">
+<div *ngIf="appInsightsService.appInsightsSettings.validForStack && appInsightsService.appInsightsSettings.enabledForWebApp"
+    class="panel panel-default" style="margin-top:15px;margin-bottom:20px">
     <div class="panel-heading" style="font-weight:500;font-size:15px">
-            <img src="https://azure.microsoft.com/svghandler/application-insights/?width=18&height=18">            
-            Top Server Exceptions During This Time
-            <div class="pull-right hyperlink" style="font-size:13px">
-                View More in Application Insights 
-                <i class="fa fa-chevron-right" aria-hidden="true" style="margin-left:5px"></i>                
-            </div>
+        <img src="https://azure.microsoft.com/svghandler/application-insights/?width=18&height=18"> Top Server Exceptions During This Time
+        <div class="pull-right hyperlink" style="font-size:13px">
+            View More in Application Insights
+            <i class="fa fa-chevron-right" aria-hidden="true" style="margin-left:5px"></i>
+        </div>
     </div>
     <div class="panel-body" style="min-height:100px;overflow:auto">
-        <div *ngIf="loading" style="font-size:14px">
-                <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true" style="color:#383838"></i>
-                Fetching exceptions from Application Insights            
+        <div *ngIf="loading" style="font-size:14px;margin-bottom:10px">
+            <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true" style="color:#696969"></i>
+            Fetching exceptions from Application Insights
         </div>
         <table *ngIf="!loading && exceptions.length > 0" class="table table-bordered table-hover table-responsive">
             <thead>
@@ -30,8 +30,18 @@
 
         </table>
 
-        <div *ngIf="!loading && exceptions.length === 0" style="font-size:14px">
+        <div *ngIf="!loading && exceptions.length === 0" style="font-size:14px;margin-bottom:10px">
             No Exceptions found during this time.
+        </div>
+
+        <div class="alert alert-warning" role="alert" style="margin-bottom:0" *ngIf="!appInsightsService.appInsightsSettings.connectedWithSupportCenter">
+            Looks like your application insights resource
+            <span style="font-weight:500;color:black">{{appInsightsService.appInsightsSettings.name}}</span> is not connected with App Service diagnostics. Connect
+            your application insights resource with App Service diagnostics to gain better insights about your failures and
+            correlation with platform events.
+
+            <span style="margin-left:5px" class="hyperlink" [routerLink]="['../../settings/appinsights']">Edit Settings</span>
+
         </div>
     </div>
 </div>
