disable support center connection for now

--- a/app/shared/components/app-insights/app-insights-tile.component.html
+++ b/app/shared/components/app-insights/app-insights-tile.component.html
@@ -28,7 +28,8 @@
                 </div>
             </div>
 
-            <div style="margin-top:10px">
+            <!-- Connection with Support Center. Will be enabled later. -->
+            <!--<div style="margin-top:10px">
                 <div style="display:inline">
                     
                     <div style="display:inline-block;height:40px;vertical-align: text-bottom">
@@ -60,7 +61,7 @@
                 <div style="display:inline-block" class="pull-right hyperlink" [ngClass]="{'disabled1': appInsightsService.appInsightsSettings.enabledForWebApp === false}" [routerLink]="['settings/appinsights']">
                         edit
                 </div>
-            </div>
+            </div>-->
 
         </div>
     </div>
