open app insights blade

--- a/app/shared/components/app-insights/app-insights-tile.component.html
+++ b/app/shared/components/app-insights/app-insights-tile.component.html
@@ -23,8 +23,8 @@
                     </div>
                 </div>
                 <div style="display:inline-block" class="pull-right hyperlink">
-                    <div *ngIf="appInsightsService.appInsightsSettings.enabledForWebApp">open</div>
-                    <div *ngIf="appInsightsService.appInsightsSettings.enabledForWebApp === false">create</div>
+                    <div *ngIf="appInsightsService.appInsightsSettings.enabledForWebApp" (click)="OpenAppInsights()">open</div>
+                    <div *ngIf="appInsightsService.appInsightsSettings.enabledForWebApp === false" (click)="OpenAppInsights()">create</div>
                 </div>
             </div>
 
