--- a/app/shared/components/app-insights/exceptions/app-insights-exceptions.component.html
+++ b/app/shared/components/app-insights/exceptions/app-insights-exceptions.component.html
@@ -2,8 +2,8 @@
     class="panel panel-default" style="margin-top:15px;margin-bottom:20px">
     <div class="panel-heading" style="font-weight:500;font-size:15px">
         <img src="https://azure.microsoft.com/svghandler/application-insights/?width=18&height=18"> Top Server Exceptions During This Time
-        <div class="pull-right hyperlink" style="font-size:13px">
-            View More in Application Insights
+        <div class="pull-right hyperlink" style="font-size:13px" (click)="OpenAppInsights()">
+            View More in App Insights
             <i class="fa fa-chevron-right" aria-hidden="true" style="margin-left:5px"></i>
         </div>
     </div>
