--- a/app/shared/components/app-insights/exceptions/app-insights-exceptions.component.html
+++ b/app/shared/components/app-insights/exceptions/app-insights-exceptions.component.html
@@ -32,6 +32,9 @@
 
         <div *ngIf="!loading && exceptions.length === 0" style="font-size:14px;margin-bottom:10px">
             No Exceptions found during this time.
+            <br />
+            Learn how to log exceptions to application insights <a class="hyperlink" href="https://goo.gl/thnx4Y" target="_blank">here</a>.
+            
         </div>
 
         <!-- TODO : Enable this code when shipping App Insights Connection-->
