changes for linux workers in support center

--- a/app/availability/detector-view/detectors/docker-container-start-stop-detector/docker-container-start-stop-detector.component.html
+++ b/app/availability/detector-view/detectors/docker-container-start-stop-detector/docker-container-start-stop-detector.component.html
@@ -1,16 +1,22 @@
-<metric-graph [metricSets]="detectorMetrics" [title]="detectorMetricsTitle" [chartType]="metricsChartType" [yAxisLabel]="detectorMetricsYAxisLabel"></metric-graph>
-
+<metric-graph 
+[metricSets]="detectorMetrics" 
+[title]="detectorMetricsTitle" 
+[chartType]="metricsChartType" 
+[yAxisLabel]="detectorMetricsYAxisLabel"
+[chartOptions]="chartOptions"></metric-graph>
+<span *ngIf="showMetadata">Docker Container Logs during this time</span>
 <table *ngIf="showMetadata" class="table table-bordered" style="margin-top:8px;margin-bottom:5px;">
     <thead>
         <tr>
-            <th style="width:220px;">Time</th>
+            <th style="width:160px;">Time (UTC)</th>
             <th>Message</th>
                 
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let row of detectorResponse.data">
-            <td *ngFor="let col of row" >{{col.value}}</td>
+            <td><p style="white-space: pre;">{{formatDate(row[0].value) }}</p></td>
+            <td><p style="white-space: pre;">{{row[1].value}}</p></td>
         </tr>
     </tbody>
 </table>
