--- a/app/availability/analysis/app-analysis.component.html
+++ b/app/availability/analysis/app-analysis.component.html
@@ -22,13 +22,10 @@
                     [openedFromTicketFlow]="bladeOpenedFromSupportTicketFlow">
                 </observations-availability>
                 <br/>
-                <!-- <solution-list *ngIf="abnormalTimePeriods && selectedTimePeriodIndex >= 0" 
+                <solution-list *ngIf="abnormalTimePeriods && selectedTimePeriodIndex >= 0" 
                     [abnormalTimePeriod]="abnormalTimePeriods[selectedTimePeriodIndex]"
                     [openedFromTicketFlow]="bladeOpenedFromSupportTicketFlow">
-                </solution-list> -->
-                <solutions-widget [solutionModels]="[]">
-
-                </solutions-widget>
+                </solution-list>
             </div>
         </div>
     </div>
