Adding Logging and Solution Feedback

--- a/app/solutions/components/common/default-solution-template/default-solution-template.component.html
+++ b/app/solutions/components/common/default-solution-template/default-solution-template.component.html
@@ -12,4 +12,6 @@
         <p>{{description}}</p>
     </div>
     <ng-content></ng-content>
+
+    <solution-feedback [solutionName]="title"></solution-feedback>
 </div>
